--- a/buildPlugins/src/main/groovy/conventions.gradle
+++ b/buildPlugins/src/main/groovy/conventions.gradle
@@ -28,6 +28,7 @@ idea {
     module {
         sourceDirs -= file('src/itest/java')
         testSources.from file('src/itest/java')
+        downloadSources = true
     }
 }
 
@@ -64,7 +65,7 @@ dependencies {
 
 // from same page as itest sourceSets block
 def integrationTest = tasks.register('integrationTest', Test) {
-    description = 'Runs integration tests.'
+    it.setDescription('Runs integration tests.')
     group = 'verification'
 
     testClassesDirs = sourceSets.itest.output.classesDirs
