--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'side-projects'
 includeBuild 'buildPlugins'
 include 'cloud:aws:dynamodb:examples'
 include 'cloud:tf:provisioner-data'
+include 'cloud:util:logging-proxy:openresty'
 include 'leet-code'
