try just doing it with spring-boot-starter-web

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ includeBuild 'buildPlugins'
 include 'cloud:aws:dynamodb:examples'
 include 'cloud:tf:provisioner-data'
 include 'cloud:util:logging-proxy:openresty'
+include 'cloud:util:logging-proxy:spring-boot'
 include 'leet-code'
