--- a/cloud/util/logging-proxy/spring-boot/build.gradle
+++ b/cloud/util/logging-proxy/spring-boot/build.gradle
@@ -5,5 +5,7 @@ plugins {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // implementation 'org.apache.httpcomponents.client5:httpclient5'
     implementation 'commons-io:commons-io:2.15.1'
 }
