--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include 'cloud:aws:dynamodb:examples'
 include 'cloud:tf:provisioner-data'
 include 'cloud:util:logging-proxy:openresty'
 include 'cloud:util:logging-proxy:spring-boot'
+include 'cloud:util:logging-proxy:spring-boot-netty'
 include 'leet-code'
