move logged-application around

--- a/cloud/util/logging-proxy/openresty/build.gradle
+++ b/cloud/util/logging-proxy/openresty/build.gradle
@@ -3,6 +3,8 @@ plugins {
 }
 
 dependencies {
+    // generally this is a big no-no but for testing it is fine it it works
+    implementation project(':cloud:util:logging-proxy:logged-application')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     itestImplementation 'org.springframework.boot:spring-boot-starter-webflux'
