--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'side-projects'
 includeBuild 'buildPlugins'
 include 'cloud:aws:dynamodb:examples'
 include 'cloud:tf:provisioner-data'
+include 'cloud:util:logging-proxy:logged-application'
 include 'cloud:util:logging-proxy:openresty'
 include 'cloud:util:logging-proxy:spring-boot'
 include 'cloud:util:logging-proxy:spring-boot-netty'
