some basic tests, testcontainers to the rescue again

--- a/cloud/util/logging-proxy/spring-boot-netty/build.gradle
+++ b/cloud/util/logging-proxy/spring-boot-netty/build.gradle
@@ -9,7 +9,12 @@ dependencies {
     // implementation 'org.apache.httpcomponents.client5:httpclient5'
     implementation 'commons-io:commons-io:2.15.1'
 
-    // generally this is a big no-no but for testing it is fine it it works
-    itestImplementation project(':cloud:util:logging-proxy:logged-application')
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     itestImplementation 'org.testcontainers:testcontainers'
+}
+
+tasks.named('integrationTest', Test) {
+    def laJar = project(':cloud:util:logging-proxy:logged-application').tasks.named('bootJar').get()
+    it.dependsOn laJar
+    it.systemProperty('loggedAppJar', laJar.outputs.files.singleFile.path)
 }
