--- a/cloud/util/logging-proxy/logged-application/build.gradle
+++ b/cloud/util/logging-proxy/logged-application/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'conventions'
+    id 'org.springframework.boot' version '3.2.1'
 }
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
