--- a/cloud/util/logging-proxy/openresty/src/itest/resources/nginx.conf
+++ b/cloud/util/logging-proxy/openresty/src/itest/resources/nginx.conf
@@ -1,3 +1,4 @@
+# this file is the default /usr/local/openresty/nginx/conf/nginx.conf after 'apt install openresty'
 
 #user  nobody;
 worker_processes  1;
@@ -22,27 +23,7 @@ http {
     #                  '$status $body_bytes_sent "$http_referer" '
     #                  '"$http_user_agent" "$http_x_forwarded_for"';
 
-    # create the log entry variable, to modify later with lua
-    map $host $log_entry { default ''; }
-
-    ## create the headers variables, to modify later with lua
-    #map $host $req_headers { default ''; }
-    #map $host $res_headers { default ''; }
-
-    log_format  main escape=none  '$log_entry';
-    #log_format  main escape=none  '{'
-    #                  '"remote_addr": "$remote_addr", '
-    #                  '"time_local": "$time_local", '
-    #                  '"request_method": "$request_method", '
-    #                  '"request_uri": "$request_uri", '
-    #                  '"status": "$status", '
-    #                  '"req_headers": $req_headers, '
-    #                  '"res_headers": $res_headers, '
-    #                  '"res_body_size": "$body_bytes_sent", '
-    #                  '"": ""'
-    #                  '}'
-    #                  ;
-    access_log  logs/access.log  main;
+    #access_log  logs/access.log  main;
 
     sendfile        on;
     #tcp_nopush     on;
@@ -52,33 +33,7 @@ http {
 
     #gzip  on;
 
-    lua_need_request_body on;
-    init_by_lua_block {
-        require "cjson"
-
-        function filterHeaders(map)
-            local result = {}
-            for name, value in pairs(map) do
-                local lower = name:lower()
-                if not (lower:find("auth") or lower:find("key")) then
-                    result[name] = value
-                end
-            end
-            return result
-            --#local result = {}
-            --#for key, value in pairs(map) do
-            --#    local lowercaseKey = key:lower()
-            --#    if not (lowercaseKey:find("auth") or lowercaseKey:find("key")) then
-            --#        table.insert(result, key .. "=" .. value)
-            --#    end
-            --#end
-            --#return table.concat(result, ",")
-        end
-    }
-
     server {
-        set $res_body '';
-        set $res_body_done '';
         listen       80;
         server_name  localhost;
 
@@ -87,51 +42,9 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            #root   html;
-            #index  index.html index.htm;
-            proxy_pass http://localhost:8080;
+            root   html;
+            index  index.html index.htm;
         }
-
-        body_filter_by_lua_block {
-            local t = ngx.var.res_body
-            if (type(t) == 'string') then t = {}; end
-            ngx.var.res_body = t
-
-            t[#t + 1] = ngx.arg[1]
-            if (ngx.arg[2]) then
-                local cjson = require "cjson"
-                -- none of these work!
-                ngx.var.res_body_done = t[0] or "empty"
-                --#ngx.var.res_body_done = table.tostring(t)
-                --#ngx.var.res_body_done = cjson.encode(t)
-            end
-        }
-
-        log_by_lua_block {
-            -- cached version, first loaded in init_by_lua_block
-            local cjson = require "cjson"
-            ngx.var.log_entry = cjson.encode({
-                remote_addr = ngx.var.remote_addr,
-                time_local = ngx.var.time_local,
-                request_method = ngx.var.request_method,
-                request_uri = ngx.var.request_uri,
-                status = ngx.status,
-                req = {
-                    headers = filterHeaders(ngx.req.get_headers()),
-                },
-                resp = {
-                    headers = filterHeaders(ngx.resp.get_headers()),
-                    size = ngx.var.body_bytes_sent,
-                    body = ngx.var.res_body_done,
-                },
-            })
-            --ngx.var.req_headers = mapToString(ngx.req.get_headers())
-            --ngx.var.res_headers = mapToString(ngx.resp.get_headers())
-        }
-
-        #header_filter_by_lua_block {
-        #    ngx.var.res_headers = mapToString(ngx.headers   )
-        #}
 
         #error_page  404              /404.html;
 
