looks like it works

--- a/cloud/util/logging-proxy/openresty/src/itest/resources/nginx.conf
+++ b/cloud/util/logging-proxy/openresty/src/itest/resources/nginx.conf
@@ -1,5 +1,3 @@
-# this file is the default /usr/local/openresty/nginx/conf/nginx.conf after 'apt install openresty'
-
 #user  nobody;
 worker_processes  1;
 
@@ -33,86 +31,75 @@ http {
 
     #gzip  on;
 
+    # we are escaping already by using cjson to encode the log_entry
+    log_format main escape=none '$log_entry';
+    access_log logs/access.log main;
+
+    # read the request body ahead of time please
+    lua_need_request_body on;
+    # load up some modules, and functions once to save time with jit
+    init_by_lua_block {
+        require "cjson"
+
+        function filterHeaders(map)
+            local result = {}
+            for name, value in pairs(map) do
+                local lower = name:lower()
+                if not (lower:find("auth") or lower:find("key")) then
+                    result[name] = value
+                end
+            end
+            return result
+        end
+    }
+
     server {
         listen       80;
         server_name  localhost;
 
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
+        keepalive_timeout  0;
+        server_tokens off;
+        more_clear_headers server;
 
         location / {
-            root   html;
-            index  index.html index.htm;
+            #root   html;
+            #index  index.html index.htm;
+            proxy_pass http://localhost:8080;
+            proxy_buffering off;
+        }
+
+        set $resp_body "";
+        body_filter_by_lua_block {
+            ngx.var.resp_body = ngx.var.resp_body .. ngx.arg[1];
+        }
+
+        set $log_entry "";
+        log_by_lua_block {
+            -- cached version, first loaded in init_by_lua_block
+            local cjson = require "cjson"
+            ngx.var.log_entry = cjson.encode({
+                remote_addr = ngx.var.remote_addr,
+                time_local = ngx.var.time_local,
+                request_method = ngx.var.request_method,
+                request_uri = ngx.var.request_uri,
+                status = ngx.status,
+                req = {
+                    headers = filterHeaders(ngx.req.get_headers()),
+                    body = ngx.var.request_body
+                },
+                resp = {
+                    headers = filterHeaders(ngx.resp.get_headers()),
+                    size = ngx.var.body_bytes_sent,
+                    body = ngx.var.resp_body,
+                },
+            })
         }
 
         #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
+        ## redirect server error pages to the static page /50x.html
+        #error_page   500 502 503 504  /50x.html;
+        #location = /50x.html {
+        #    root   html;
         #}
     }
-
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
-
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
-
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
 }
