another timeout, reorganize log_entry

--- a/cloud/util/logging-proxy/openresty/src/itest/resources/nginx.conf
+++ b/cloud/util/logging-proxy/openresty/src/itest/resources/nginx.conf
@@ -66,6 +66,7 @@ http {
             #index  index.html index.htm;
             proxy_pass http://localhost:8080;
             proxy_buffering off;
+            proxy_read_timeout 365d; # https://serverfault.com/a/777753
         }
 
         set $resp_body "";
@@ -79,17 +80,20 @@ http {
             local cjson = require "cjson"
             ngx.var.log_entry = cjson.encode({
                 remote_addr = ngx.var.remote_addr,
-                time_local = ngx.var.time_local,
-                request_method = ngx.var.request_method,
-                request_uri = ngx.var.request_uri,
-                status = ngx.status,
+                timing = {
+                    time_iso8601 = ngx.var.time_iso8601,
+                    time_millis = ngx.var.msec * 1000,
+                    response_millis = ngx.var.upstream_response_time * 1000,
+                },
                 req = {
+                    method = ngx.var.request_method,
+                    uri = ngx.var.request_uri,
                     headers = filterHeaders(ngx.req.get_headers()),
-                    body = ngx.var.request_body
+                    body = ngx.var.request_body or false,
                 },
                 resp = {
+                    status = ngx.status,
                     headers = filterHeaders(ngx.resp.get_headers()),
-                    size = ngx.var.body_bytes_sent,
                     body = ngx.var.resp_body,
                 },
             })
