limit client body size to 1G

--- a/cloud/util/logging-proxy/openresty/src/itest/resources/nginx.conf
+++ b/cloud/util/logging-proxy/openresty/src/itest/resources/nginx.conf
@@ -60,6 +60,7 @@ http {
         keepalive_timeout  0;
         server_tokens off;
         more_clear_headers server;
+        client_max_body_size 1G;
 
         location / {
             #root   html;
