attempt to implement "Sharing outputs between projects"

--- a/cloud/util/logging-proxy/logged-application/build.gradle
+++ b/cloud/util/logging-proxy/logged-application/build.gradle
@@ -8,3 +8,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
+
+configurations.create('la') {
+    canBeConsumed = true
+    canBeResolved = false
+}
+
+artifacts.add('la', bootJar)
