--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'side-projects'
 includeBuild 'buildPlugins'
 include 'cloud:aws:dynamodb:examples'
+include 'cloud:tf:basic-plugin'
 include 'cloud:tf:provisioner-data'
 include 'cloud:util:logging-proxy:logged-application'
 include 'cloud:util:logging-proxy:openresty'
