make room for other sites, like project euler

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'cloud:util:logging-proxy:logged-application'
 include 'cloud:util:logging-proxy:openresty'
 include 'cloud:util:logging-proxy:spring-boot'
 include 'cloud:util:logging-proxy:spring-boot-netty'
-include 'leet-code'
+include 'leet-code:leet-code'
+include 'leet-code:project-euler'
