traffic light: start

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,6 @@ include 'cloud:util:logging-proxy:logged-application'
 include 'cloud:util:logging-proxy:openresty'
 include 'cloud:util:logging-proxy:spring-boot'
 include 'cloud:util:logging-proxy:spring-boot-netty'
+include 'leet-code:amazon:traffic-light'
 include 'leet-code:leet-code'
 include 'leet-code:project-euler'
