some thoughts out on paper

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ include 'cloud:util:logging-proxy:spring-boot'
 include 'cloud:util:logging-proxy:spring-boot-netty'
 include 'leet-code:amazon:traffic-light'
 include 'leet-code:leet-code'
+include 'leet-code:one-billion-row-challenge'
 include 'leet-code:project-euler'
