--- a/settings.gradle
+++ b/settings.gradle
@@ -11,3 +11,4 @@ include 'leet-code:amazon:traffic-light'
 include 'leet-code:leet-code'
 include 'leet-code:one-billion-row-challenge'
 include 'leet-code:project-euler'
+include 'misc:resume-generator-linkedin'
