--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'cloud:aws:dynamodb:examples'
 include 'cloud:tf:basic-plugin'
 include 'cloud:tf:provisioner-data'
 include 'cloud:tf:tf-ideas:tf-idea1'
+include 'cloud:tf:tf-ideas:tf-idea2'
 include 'cloud:util:logging-proxy:logged-application'
 include 'cloud:util:logging-proxy:openresty'
 include 'cloud:util:logging-proxy:spring-boot'
