create react-ts vite

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ include 'leet-code:amazon:traffic-light'
 include 'leet-code:leet-code'
 include 'leet-code:one-billion-row-challenge'
 include 'leet-code:project-euler'
+include 'misc:file-browser:file-browser-frontend'
 include 'misc:resume-generator-linkedin'
