--- a/misc/file-browser/file-browser-frontend/package.json
+++ b/misc/file-browser/file-browser-frontend/package.json
@@ -14,6 +14,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.21.2",
     "sort-by": "^1.2.0"
   },
@@ -26,6 +27,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "miragejs": "^0.1.48",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
