--- a/misc/citation-management/package.json
+++ b/misc/citation-management/package.json
@@ -8,13 +8,18 @@
     "dev": "concurrently 'npm run dev:frontend' 'npm run dev:backend'",
     "dev:frontend": "vite build --watch --mode=dev",
     "dev:backend": "nodemon bin/www.js",
+    "knex": "knex",
     "vite": "vite"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.18.2",
-    "morgan": "~1.9.1"
+    "express-async-errors": "^3.1.1",
+    "knex": "^3.1.0",
+    "lodash": "^4.17.21",
+    "morgan": "~1.9.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.3",
