--- a/misc/citation-management/package.json
+++ b/misc/citation-management/package.json
@@ -9,6 +9,7 @@
     "dev:frontend": "vite build --watch --mode=dev",
     "dev:backend": "nodemon bin/www.js",
     "knex": "knex",
+    "jasmine": "jasmine",
     "vite": "vite"
   },
   "dependencies": {
@@ -19,18 +20,23 @@
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
+    "pg": "^8.11.3",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@testcontainers/postgresql": "^10.5.0",
     "@types/node": "^20.11.3",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "bootstrap": "^5.3.2",
+    "chai": "^5.0.0",
     "concurrently": "^8.2.2",
+    "jasmine": "^5.1.0",
     "nodemon": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "testcontainers": "^10.5.0",
     "vite": "^5.0.11"
   }
 }
