--- a/misc/citation-management/package.json
+++ b/misc/citation-management/package.json
@@ -22,6 +22,7 @@
     "debug": "~2.6.9",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "http-errors": "^2.0.0",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
@@ -42,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router": "^6.21.2",
+    "react-router-dom": "^6.21.2",
     "testcontainers": "^10.5.0",
     "vite": "^5.0.11"
   }
