--- a/misc/citation-management/package.json
+++ b/misc/citation-management/package.json
@@ -14,6 +14,9 @@
     "dev": "concurrently 'npm run dev:frontend' 'npm run dev:backend'",
     "dev:frontend": "vite build --watch --mode=dev",
     "dev:backend": "nodemon bin/www.js",
+    "reload": "concurrently 'npm run reload:frontend' 'npm run reload:backend'",
+    "reload:frontend": "vite",
+    "reload:backend": "nodemon bin/www.js",
     "dev:vite": "vite dev",
     "knex": "knex",
     "jasmine": "jasmine",
