--- a/misc/citation-management/package.json
+++ b/misc/citation-management/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@testcontainers/postgresql": "^10.5.0",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.3",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
