--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,8 @@ include 'cloud:tf:basic-plugin'
 include 'cloud:tf:provisioner-data'
 include 'cloud:tf:tf-ideas:tf-idea1'
 include 'cloud:tf:tf-ideas:tf-idea2'
+// include 'cloud:util:jdba-project:jdba'
+// include 'cloud:util:jdba-project:jdba-frontend'
 include 'cloud:util:logging-proxy:logged-application'
 include 'cloud:util:logging-proxy:openresty'
 include 'cloud:util:logging-proxy:spring-boot'
