nexus-data, cleanup

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ include 'cloud:util:logging-proxy:logged-application'
 include 'cloud:util:logging-proxy:openresty'
 include 'cloud:util:logging-proxy:spring-boot'
 include 'cloud:util:logging-proxy:spring-boot-netty'
+include 'cloud:util:nexus-guide'
 include 'leet-code:amazon:traffic-light'
 include 'leet-code:leet-code'
 include 'leet-code:one-billion-row-challenge'
