--- a/misc/citation-management/package.json
+++ b/misc/citation-management/package.json
@@ -11,10 +11,10 @@
     "test:sqlite": "TEST_DB=sqlite3 jasmine test/**",
     "test:jasmine-json": "jasmine --config=jasmine.json",
     "test:sqlite:jasmine-json": "TEST_DB=sqlite3 jasmine --config=jasmine.json",
-    "dev": "concurrently 'npm run dev:frontend' 'npm run dev:backend'",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "vite build --watch --mode=dev",
     "dev:backend": "nodemon bin/www.js",
-    "reload": "concurrently 'npm run reload:frontend' 'npm run reload:backend'",
+    "reload": "concurrently \"npm run reload:frontend\" \"npm run reload:backend\"",
     "reload:frontend": "vite",
     "reload:backend": "nodemon bin/www.js",
     "dev:vite": "vite dev",
