rmse simd + benchmarking

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ include 'cloud:util:logging-proxy:spring-boot'
 include 'cloud:util:logging-proxy:spring-boot-netty'
 include 'cloud:util:nexus-guide'
 include 'leet-code:amazon:traffic-light'
+include 'leet-code:benchmarking'
 include 'leet-code:leet-code'
 include 'leet-code:one-billion-row-challenge'
 include 'leet-code:project-euler'
