--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
 include 'misc:resume-generator-linkedin'
 include 'misc:totp4j'
+include 'misc:url-shortener'
