implement one time password generation based on yitsushi/totp-cli

--- a/misc/totp4j/build.gradle
+++ b/misc/totp4j/build.gradle
@@ -1,3 +1,8 @@
 plugins {
-    id 'groovy-gradle-plugin'
+    id 'spring-conventions'
+}
+
+dependencies {
+    // https://mvnrepository.com/artifact/commons-codec/commons-codec
+    implementation 'commons-codec:commons-codec:1.16.0'
 }
