--- a/misc/totp4j/build.gradle
+++ b/misc/totp4j/build.gradle
@@ -1,8 +1,14 @@
 plugins {
     id 'spring-conventions'
+    id 'application'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
+
+application { mainClass.set('totp4j.cli.Totp4j') }
 
 dependencies {
     // https://mvnrepository.com/artifact/commons-codec/commons-codec
     implementation 'commons-codec:commons-codec:1.16.0'
+    implementation 'info.picocli:picocli:4.7.5'
+    annotationProcessor 'info.picocli:picocli-codegen:4.7.5'
 }
