--- a/misc/totp4j/build.gradle
+++ b/misc/totp4j/build.gradle
@@ -4,6 +4,12 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
+// so it can run everywhere else
+java {
+    sourceCompatibility JavaVersion.toVersion(17)
+    targetCompatibility JavaVersion.toVersion(17)
+}
+
 application { mainClass.set('totp4j.cli.Totp4j') }
 
 dependencies {
