--- a/cloud/util/logging-proxy/spring-boot-netty/build.gradle
+++ b/cloud/util/logging-proxy/spring-boot-netty/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'spring-conventions'
     id 'org.springframework.boot' version '3.2.1'
+    id 'com.google.cloud.tools.jib' version '3.4.0'
 }
 
 dependencies {
@@ -28,4 +29,18 @@ dependencies {
 tasks.named('integrationTest', Test) {
     inputs.files(configurations.la)
     systemProperty('loggedAppJar', configurations.la.singleFile.path)
+}
+
+jib {
+    from {
+        image = 'eclipse-temurin:21-jre-alpine@sha256:9a21ac97b76e52f4b58d5d6c7fdd459cd600cce8724a31fc0a2b4346b35bced2'
+    }
+    to {
+        image = 'daveankin/logging-proxy:netty'
+    }
+    container.entrypoint = [
+            'sh',
+            '-c',
+            'exec java $JAVA_OPTS -cp @/app/jib-classpath-file org.cloud.logging.proxy.sb.netty.AsyncLoggingProxyApp'
+    ]
 }
