start tracing guide

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ include 'cloud:util:logging-proxy:openresty'
 include 'cloud:util:logging-proxy:spring-boot'
 include 'cloud:util:logging-proxy:spring-boot-netty'
 include 'cloud:util:nexus-guide'
+include 'cloud:util:tracing-guide'
 include 'leet-code:amazon:traffic-light'
 include 'leet-code:benchmarking'
 include 'leet-code:leet-code'
