tarjans scc froms algs4.cs.princeton.edu

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,7 @@ include 'leet-code:benchmarking'
 include 'leet-code:leet-code'
 include 'leet-code:one-billion-row-challenge'
 include 'leet-code:project-euler'
+include 'leet-code:tarjans-scc'
 include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
 include 'misc:resume-generator-linkedin'
