rx java is really one of the worst things

--- a/settings.gradle
+++ b/settings.gradle
@@ -22,5 +22,6 @@ include 'leet-code:tarjans-scc'
 include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
 include 'misc:resume-generator-linkedin'
+include 'misc:rxjava3-scratch'
 include 'misc:totp4j'
 include 'misc:url-shortener'
