--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,8 @@ include 'cloud:util:logging-proxy:spring-boot'
 include 'cloud:util:logging-proxy:spring-boot-netty'
 include 'cloud:util:nexus-guide'
 include 'cloud:util:tracing-guide'
+include 'cloud:util:vpn:ovpn4j:ovpn4j-config-parser'
+include 'cloud:util:vpn:ovpn4j:ovpn4j-protocol'
 include 'leet-code:amazon:traffic-light'
 include 'leet-code:benchmarking'
 include 'leet-code:leet-code'
