ovpn config model

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include 'cloud:util:logging-proxy:spring-boot-netty'
 include 'cloud:util:nexus-guide'
 include 'cloud:util:tracing-guide'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-config-parser'
+include 'cloud:util:vpn:ovpn4j:ovpn4j-model'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-protocol'
 include 'leet-code:amazon:traffic-light'
 include 'leet-code:benchmarking'
