--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ include 'cloud:tf:basic-plugin'
 include 'cloud:tf:provisioner-data'
 include 'cloud:tf:tf-ideas:tf-idea1'
 include 'cloud:tf:tf-ideas:tf-idea2'
+apply from: './cloud/util/area/include.gradle'
 // include 'cloud:util:jdba-project:jdba'
 // include 'cloud:util:jdba-project:jdba-frontend'
 include 'cloud:util:logging-proxy:logged-application'
