--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'side-projects'
 includeBuild 'buildPlugins'
 include 'cloud:aws:dynamodb:examples'
+include 'cloud:aws:lambda-runtime-client'
 include 'cloud:tf:basic-plugin'
 include 'cloud:tf:provisioner-data'
 include 'cloud:tf:tf-ideas:tf-idea1'
