--- a/settings.gradle
+++ b/settings.gradle
@@ -25,6 +25,7 @@ include 'leet-code:project-euler'
 include 'leet-code:tarjans-scc'
 include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
+include 'misc:reinforcement-learning-snake'
 include 'misc:resume-generator-linkedin'
 include 'misc:rxjava3-scratch'
 include 'misc:totp4j'
