azure data things

--- a/settings.gradle
+++ b/settings.gradle
@@ -23,6 +23,7 @@ include 'leet-code:leet-code'
 include 'leet-code:one-billion-row-challenge'
 include 'leet-code:project-euler'
 include 'leet-code:tarjans-scc'
+include 'misc:azure-things:azure-data-things'
 include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
 include 'misc:reinforcement-learning-snake'
