--- a/settings.gradle
+++ b/settings.gradle
@@ -24,6 +24,7 @@ include 'leet-code:one-billion-row-challenge'
 include 'leet-code:project-euler'
 include 'leet-code:tarjans-scc'
 include 'misc:azure-things:azure-data-things'
+include 'misc:azure-things:azure-data-things:container_test'
 include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
 include 'misc:reinforcement-learning-snake'
