--- a/misc/azure-things/azure-data-things/container_test/pyproject.toml
+++ b/misc/azure-things/azure-data-things/container_test/pyproject.toml
@@ -5,8 +5,9 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.10,<4"
 azure-storage-blob = "12.20.0"
+azure-identity = "1.17.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.2.2"
