--- a/buildPlugins/src/main/groovy/spring-conventions.gradle
+++ b/buildPlugins/src/main/groovy/spring-conventions.gradle
@@ -7,5 +7,7 @@ dependencies {
     implementation platform('org.springframework.boot:spring-boot-dependencies:3.3.2')
     implementation platform('org.springframework.cloud:spring-cloud-dependencies:2023.0.0')
 
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
