--- a/misc/docker-client/pyproject.toml
+++ b/misc/docker-client/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+urllib3 = ">= 1.25.3, <3.0.0"
+python-dateutil = ">= 2.8.0"
+pydantic = "^2.10.1"
+typing-extensions = ">= 4.7.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
