--- a/misc/python-clients/openapi_client_generator/pyproject.toml
+++ b/misc/python-clients/openapi_client_generator/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 pyyaml = "^6.0.2"
+jpype1 = "^1.5.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
