--- a/settings.gradle
+++ b/settings.gradle
@@ -29,6 +29,7 @@ include 'misc:azure-things:azure-data-things:container_test'
 include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
 include 'misc:packaging:gradle-to-maven'
+include 'misc:reference-projects:spring-boot-react-todo'
 include 'misc:reinforcement-learning-snake'
 include 'misc:resume-generator-linkedin'
 include 'misc:rxjava3-scratch'
