--- a/settings.gradle
+++ b/settings.gradle
@@ -30,6 +30,7 @@ include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
 include 'misc:packaging:gradle-to-maven'
 include 'misc:reference-projects:spring-boot-react-todo'
+include 'misc:reference-projects:spring-boot-react-todo-frontend'
 include 'misc:reinforcement-learning-snake'
 include 'misc:resume-generator-linkedin'
 include 'misc:rxjava3-scratch'
