--- a/misc/reference-projects/spring-boot-react-todo-frontend/build.gradle
+++ b/misc/reference-projects/spring-boot-react-todo-frontend/build.gradle
@@ -1,3 +1,5 @@
+import java.util.concurrent.TimeUnit
+
 plugins {
     id 'com.github.node-gradle.node' version '7.1.0'
 }
@@ -17,6 +19,9 @@ def dist = tasks.register('dist', NpmTask) { n ->
     n.outputs.dir(outputDir)
     n.args = ['run', 'build']
 
+    // check if we need to run install
+    doFirst { ensurePackagesInstalled(n.project.projectDir) }
+
     doLast {
         copy {
             // where it builds
@@ -29,3 +34,33 @@ def dist = tasks.register('dist', NpmTask) { n ->
 
 configurations.create('dist') { canBeConsumed = true; canBeResolved = false }
 artifacts.add('dist', dist)
+
+// helper method
+static def ensurePackagesInstalled(File moduleDir) {
+    if (new File(moduleDir, 'node_modules').exists()) return
+
+    var re = new RuntimeException('tried to install with bun and npm ci and install')
+
+    try {
+        assert 0 == new ProcessBuilder('bun', 'install').directory(moduleDir).inheritIO().start().tap { waitFor(30, TimeUnit.SECONDS) }.exitValue()
+        return
+    } catch (Throwable e) {
+        re.addSuppressed(e)
+    }
+
+    try {
+        assert 0 == new ProcessBuilder('npm', 'ci').directory(moduleDir).inheritIO().start().tap { waitFor(30, TimeUnit.SECONDS) }.exitValue()
+        return
+    } catch (Throwable e) {
+        re.addSuppressed(e)
+    }
+
+    try {
+        assert 0 == new ProcessBuilder('npm', 'install').directory(moduleDir).inheritIO().start().tap { waitFor(30, TimeUnit.SECONDS) }.exitValue()
+        return
+    } catch (Throwable e) {
+        re.addSuppressed(e)
+    }
+
+    throw re
+}
