--- a/misc/reference-projects/spring-boot-react-todo/build.gradle
+++ b/misc/reference-projects/spring-boot-react-todo/build.gradle
@@ -10,6 +10,8 @@ dependencies {
 
     implementation 'io.micrometer:micrometer-tracing-bridge-brave'
     implementation 'org.liquibase:liquibase-core'
+    implementation 'com.fasterxml.uuid:java-uuid-generator:4.3.0'
+    compileOnly 'org.hibernate.orm:hibernate-core'
 
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
     runtimeOnly 'org.postgresql:postgresql'
