--- a/.editorconfig
+++ b/.editorconfig
@@ -26,6 +26,8 @@ ij_javascript_force_quote_style = true
 ij_javascript_import_sort_members = true
 ij_javascript_import_sort_module_name = true
 ij_javascript_spaces_within_imports = true
+ij_javascript_spaces_within_object_literal_braces = true
+ij_javascript_spaces_within_object_type_braces = true
 ij_typescript_enforce_trailing_comma = whenmultiline
 ij_typescript_use_semicolon_after_statement = true
 ij_typescript_force_semicolon_style = true
@@ -34,4 +36,6 @@ ij_typescript_force_quote_style = true
 ij_typescript_import_sort_members = true
 ij_typescript_import_sort_module_name = true
 ij_typescript_spaces_within_imports = true
+ij_typescript_spaces_within_object_literal_braces = true
+ij_typescript_spaces_within_object_type_braces = true
 ij_html_space_inside_empty_tag = true
