--- a/buildPlugins/src/main/groovy/conventions.gradle
+++ b/buildPlugins/src/main/groovy/conventions.gradle
@@ -7,8 +7,8 @@ plugins {
 group = 'info.ankin.side-projects'
 
 java {
-    sourceCompatibility JavaVersion.VERSION_21
-    targetCompatibility JavaVersion.VERSION_21
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 repositories {
