--- a/misc/totp4j/build.gradle
+++ b/misc/totp4j/build.gradle
@@ -6,8 +6,8 @@ plugins {
 
 // so it can run everywhere else
 java {
-    sourceCompatibility JavaVersion.toVersion(17)
-    targetCompatibility JavaVersion.toVersion(17)
+    sourceCompatibility = JavaVersion.toVersion(17)
+    targetCompatibility = JavaVersion.toVersion(17)
 }
 
 application { mainClass.set('totp4j.cli.Totp4j') }
