--- a/settings.gradle
+++ b/settings.gradle
@@ -26,6 +26,7 @@ include 'leet-code:project-euler'
 include 'leet-code:tarjans-scc'
 include 'misc:azure-things:azure-data-things'
 include 'misc:azure-things:azure-data-things:container_test'
+include 'misc:bc-scratch'
 include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
 include 'misc:packaging:gradle-to-maven'
