--- a/settings.gradle
+++ b/settings.gradle
@@ -29,6 +29,7 @@ include 'misc:azure-things:azure-data-things:container_test'
 include 'misc:bc-scratch'
 include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
+include 'misc:mc:mc-plugins:mc-first-plugin'
 include 'misc:packaging:gradle-to-maven'
 include 'misc:reference-projects:spring-boot-react-todo'
 include 'misc:reference-projects:spring-boot-react-todo-frontend'
