--- a/settings.gradle
+++ b/settings.gradle
@@ -30,6 +30,7 @@ include 'misc:bc-scratch'
 include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
 include 'misc:mc:mc-plugins:mc-first-plugin'
+include 'misc:mc:mc-plugins:mc-second-plugin'
 include 'misc:packaging:gradle-to-maven'
 include 'misc:reference-projects:spring-boot-react-todo'
 include 'misc:reference-projects:spring-boot-react-todo-frontend'
