--- a/settings.gradle
+++ b/settings.gradle
@@ -32,6 +32,7 @@ include 'misc:file-browser:file-browser-frontend'
 include 'misc:mc:mc-plugins:mc-first-plugin'
 include 'misc:mc:mc-plugins:mc-second-plugin'
 include 'misc:packaging:gradle-to-maven'
+include 'misc:rate-limits'
 include 'misc:reference-projects:spring-boot-react-todo'
 include 'misc:reference-projects:spring-boot-react-todo-frontend'
 include 'misc:reinforcement-learning-snake'
