my debian package fools the "file" command, soon it will fool ubuntu too

--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,7 @@ include 'misc:citation-management'
 include 'misc:file-browser:file-browser-frontend'
 include 'misc:mc:mc-plugins:mc-first-plugin'
 include 'misc:mc:mc-plugins:mc-second-plugin'
+include 'misc:packaging:debian'
 include 'misc:packaging:gradle-to-maven'
 include 'misc:rate-limits'
 include 'misc:reference-projects:spring-boot-react-todo'
