--- a/cloud/util/logging-proxy/spring-boot-netty/build.gradle
+++ b/cloud/util/logging-proxy/spring-boot-netty/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'spring-conventions'
     id 'org.springframework.boot' version '3.2.1'
-    id 'com.google.cloud.tools.jib' version '3.4.0'
+    // id 'com.google.cloud.tools.jib' version '3.4.0'
+    id 'jib-conventions'
 }
 
 dependencies {
@@ -33,7 +34,7 @@ tasks.named('integrationTest', Test) {
 
 jib {
     from {
-        image = 'eclipse-temurin:21-jre-alpine@sha256:9a21ac97b76e52f4b58d5d6c7fdd459cd600cce8724a31fc0a2b4346b35bced2'
+        image = 'eclipse-temurin:21-jre-alpine@sha256:4e9ab608d97796571b1d5bbcd1c9f430a89a5f03fe5aa6c093888ceb6756c502'
     }
     to {
         image = 'daveankin/logging-proxy:netty'
@@ -41,6 +42,6 @@ jib {
     container.entrypoint = [
             'sh',
             '-c',
-            'exec java $JAVA_OPTS -cp @/app/jib-classpath-file org.cloud.logging.proxy.sb.netty.AsyncLoggingProxyApp'
+            'exec java $JAVA_OPTS -cp @/app/jib-classpath-file @/app/jib-main-class-file'
     ]
 }
