--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ include 'cloud:util:logging-proxy:openresty'
 include 'cloud:util:logging-proxy:spring-boot'
 include 'cloud:util:logging-proxy:spring-boot-netty'
 include 'cloud:util:nexus-guide'
+include 'cloud:util:observability:alloy-example'
 include 'cloud:util:s3-api-emulator'
 include 'cloud:util:tracing-guide'
 include 'cloud:util:vpn:ovpn4j:ovpn4j-config-parser'
