ffi scratch stuff

--- a/settings.gradle
+++ b/settings.gradle
@@ -41,5 +41,6 @@ include 'misc:reference-projects:spring-boot-react-todo-frontend'
 include 'misc:reinforcement-learning-snake'
 include 'misc:resume-generator-linkedin'
 include 'misc:rxjava3-scratch'
+include 'misc:scratch:scratch-ffi'
 include 'misc:totp4j'
 include 'misc:url-shortener'
