--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,7 @@ include 'misc:bc-scratch'
 include 'misc:citation-management'
 include 'misc:executable-jar-file-trick'
 include 'misc:file-browser:file-browser-frontend'
+include 'misc:mc:mc-discord-ip-whitelist'
 include 'misc:mc:mc-plugins:mc-first-plugin'
 include 'misc:mc:mc-plugins:mc-second-plugin'
 include 'misc:packaging:debian'
